[gd_scene load_steps=22 format=3 uid="uid://cnnk8lswaxxcv"]

[ext_resource type="Texture2D" uid="uid://pexulgj4lso1" path="res://assets/images/boy/face.png" id="1_5smp4"]
[ext_resource type="Script" path="res://screens/activities/02/tasks/sound_a.gd" id="1_bwho7"]
[ext_resource type="Texture2D" uid="uid://b8y3jo1y8udui" path="res://assets/images/boy/mouth.png" id="2_4tvfi"]
[ext_resource type="Texture2D" uid="uid://d21ixew503ufp" path="res://assets/images/boy/mouth_a.png" id="3_cc0k3"]
[ext_resource type="AudioStream" uid="uid://wgo7pdu1y0cx" path="res://assets/voices/phonemes/a.mp3" id="4_8pkg3"]
[ext_resource type="FontFile" uid="uid://cogryc0bfmmla" path="res://assets/fonts/Poppins-SemiBold.ttf" id="6_a6qm4"]
[ext_resource type="PackedScene" uid="uid://c8kqfmnhflg6m" path="res://components/record_button.tscn" id="7_f65so"]
[ext_resource type="PackedScene" uid="uid://jriwlk872m4b" path="res://components/confetti_effect.tscn" id="8_kqka5"]
[ext_resource type="AudioStream" uid="uid://b6ctx83qptfyg" path="res://assets/voices/01/practiquemos_letra.mp3" id="8_ww07y"]
[ext_resource type="AudioStream" uid="uid://cqd4ix3fd38k6" path="res://assets/voices/02/presiona_boton_pronuncia.mp3" id="9_4ppw7"]
[ext_resource type="PackedScene" uid="uid://bhlbt7mk6goj4" path="res://components/footer.tscn" id="9_ru0ww"]
[ext_resource type="Script" path="res://scripts/prediction_component.gd" id="10_5arat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pbe6g"]
bg_color = Color(0.933333, 0.933333, 0.933333, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Animation" id="Animation_2bukg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mouth:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MouthA:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5jcps"]
resource_name = "phoneme_a"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mouth:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MouthA:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PhonemeStream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_8pkg3")
}],
"times": PackedFloat32Array(0.3)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xry47"]
_data = {
"RESET": SubResource("Animation_2bukg"),
"phoneme_a": SubResource("Animation_5jcps")
}

[sub_resource type="Animation" id="Animation_3g1ec"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Face:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(108, 226)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/Face/Phoneme:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/RecordButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Container/RecordButton:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.919999, 0.919999)]
}

[sub_resource type="Animation" id="Animation_x7xl0"]
resource_name = "intro"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.297302, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Face:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.9),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(108, 328)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/Face/Phoneme:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.4, 2.6, 2.8),
"transitions": PackedFloat32Array(0.392292, 1, 3.13834),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/4/type = "animation"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/Face/FaceAnimator")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": PackedStringArray("phoneme_a"),
"times": PackedFloat32Array(2.2)
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Narrator")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_ww07y")
}],
"times": PackedFloat32Array(0.4)
}
tracks/5/use_blend = true
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_statement_animation"
}]
}

[sub_resource type="Animation" id="Animation_qjipv"]
resource_name = "outro"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.297302, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.355, 0.355)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Footer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hidden_button"
}]
}

[sub_resource type="Animation" id="Animation_q2gs4"]
resource_name = "statement"
length = 4.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Narrator")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_4ppw7")
}],
"times": PackedFloat32Array(0.1)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.307786, 1.56917),
"update": 0,
"values": [Vector2(108, 328), Vector2(108, 210)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/RecordButton:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9, 1.1, 1.3),
"transitions": PackedFloat32Array(0.353554, 1, 2.07053),
"update": 0,
"values": [Vector2(0.919999, 0.919999), Vector2(1, 1), Vector2(0.919999, 0.919999)]
}
tracks/3/type = "animation"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/Face/FaceAnimator")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": PackedStringArray("phoneme_a"),
"times": PackedFloat32Array(3)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/RecordButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.297302, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Container:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Container:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_interactions"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_37bbk"]
_data = {
"RESET": SubResource("Animation_3g1ec"),
"intro": SubResource("Animation_x7xl0"),
"outro": SubResource("Animation_qjipv"),
"statement": SubResource("Animation_q2gs4")
}

[node name="SoundA" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwho7")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -640.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 640)

[node name="Face" type="TextureRect" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -414.0
offset_right = 252.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(252, 296)
texture = ExtResource("1_5smp4")

[node name="Phoneme" type="Panel" parent="Container/Face"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -324.0
offset_right = 97.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(97, 97)
theme_override_styles/panel = SubResource("StyleBoxFlat_pbe6g")

[node name="LetterA" type="Label" parent="Container/Face/Phoneme"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -141.0
offset_right = 89.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("6_a6qm4")
theme_override_font_sizes/font_size = 180
text = "a"

[node name="Mouth" type="Sprite2D" parent="Container/Face"]
position = Vector2(249, 500)
texture = ExtResource("2_4tvfi")

[node name="MouthA" type="Sprite2D" parent="Container/Face"]
modulate = Color(1, 1, 1, 0)
position = Vector2(250, 501)
texture = ExtResource("3_cc0k3")

[node name="FaceAnimator" type="AnimationPlayer" parent="Container/Face"]
libraries = {
"": SubResource("AnimationLibrary_xry47")
}

[node name="PhonemeStream" type="AudioStreamPlayer" parent="Container/Face"]
volume_db = 8.0
bus = &"Narrator"

[node name="RecordButton" parent="Container" instance=ExtResource("7_f65so")]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 231.0
offset_right = 120.0
offset_bottom = 471.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.919999, 0.919999)

[node name="ConfettiEffect" parent="Container" instance=ExtResource("8_kqka5")]
position = Vector2(361, 988)

[node name="Footer" parent="." instance=ExtResource("9_ru0ww")]
layout_mode = 1

[node name="TaskAnimator" type="AnimationPlayer" parent="."]
autoplay = "intro"
libraries = {
"": SubResource("AnimationLibrary_37bbk")
}

[node name="PredictionComponent" type="HTTPRequest" parent="."]
script = ExtResource("10_5arat")
endpoint = "word/a"

[node name="NarratorStatements" type="AudioStreamPlayer" parent="."]
volume_db = 5.0
bus = &"Narrator"

[node name="Narrator" type="AudioStreamPlayer" parent="."]
volume_db = 5.0
bus = &"Narrator"

[connection signal="fail" from="Container/RecordButton" to="." method="_on_record_fail"]
[connection signal="finished" from="Container/RecordButton" to="." method="_on_record_finished"]
[connection signal="pressed" from="Container/RecordButton" to="." method="_on_record_pressed"]
[connection signal="pressed" from="Footer" to="." method="_on_button_next_pressed"]
